[package]
name = "ur_rtde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
log = "0.4.14"
phf = { version = "0.11", features = ["macros"] }
mio = { version = "0.8.9", features = ["os-poll", "net"] }

[dev-dependencies]
env_logger = "0.9.0"
ctor = "0.1.21"
mockall = "0.11.1"
